@@ -1,3 +1,12 @@
+2008-08-19  David Smith  <dsmith@redhat.com>
+
+	PR 6841
+	* tapsets.cxx (utrace_derived_probe_group::emit_probe_decl):
+	Workaround utrace bug by quiescing threads before attaching a
+	utrace syscall engine to them.
+	(utrace_derived_probe_group::emit_module_decls): Emit quiesce
+	handler.
+
 2008-08-18  David Smith  <dsmith@redhat.com>
 
 	* tapsets.cxx (register_standard_tapsets): Add missing
